// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInvoiceTotal() correctly summarizes multiple rows 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 550,
      "unit": 1,
    },
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 550,
      "unit": 1,
    },
  ],
  "netTotal": 1100,
  "seperateTaxMap": Object {
    "0.25": 275,
  },
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`getInvoiceTotal() returns the correct amounts for complete row 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 1100,
      "unit": 2,
    },
  ],
  "netTotal": 1100,
  "seperateTaxMap": Object {
    "0.25": 275,
  },
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`getInvoiceTotal() sums up each different tax seperate 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 550,
      "unit": 1,
    },
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.1,
      "total": 550,
      "unit": 1,
    },
  ],
  "netTotal": 1100,
  "seperateTaxMap": Object {
    "0.1": 55,
    "0.25": 137.5,
  },
  "taxTotal": 192.5,
  "total": 1292.5,
}
`;

exports[`getInvoiceTotal() uses default tax if no tax is given for row 1`] = `
Object {
  "invoiceRows": Array [
    Object {
      "describe": "asd",
      "price": 550,
      "tax": 0.25,
      "total": 1100,
      "unit": 2,
    },
  ],
  "netTotal": 1100,
  "seperateTaxMap": Object {
    "0.25": 275,
  },
  "taxTotal": 275,
  "total": 1375,
}
`;

exports[`invoicerows send is added to status 1`] = `
Array [
  Object {
    "createdAt": Any<Number>,
  },
]
`;

exports[`invoicerows toJson() returns an pure object 1`] = `
Object {
  "createdAt": Any<Number>,
  "invoiceRows": Array [
    Object {
      "id": 1,
    },
  ],
  "locked": true,
  "recipients": Array [],
  "status": Array [
    Object {
      "createdAt": Any<Number>,
    },
  ],
}
`;
